minor changes in cors configuration